--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ label {
   opacity: 0.9;
 }
 
-.form__error-message {
+.form__error-text {
   visibility: hidden;
   text-align: center;
   padding: var(--spacing-x-small) 0;
